classDiagram
    direction LR

    class Route {
        -id: ObjectId
        -startTime: Date
        -finishTime: Date
        -isTemplate: Boolean
        -isPickUp: Boolean
        -startLocation: Point
        -endLocation: Point
        -calendarDates: Date[]
        -stops: EmbeddedStop[]
    }

    class EmbeddedStop {
        -expectedTime: Date
        -actualTime: Date?
        -isTemplate: Boolean
        -location: Point
        -students: StudentStatusMap
    }

    class StudentStatusMap {
        +reference: Boolean
        +droppedOrPicked: Boolean
        +guardianVerified: Boolean
        %% Keys are student_uuid, values are the above status object
    }

    class Guardian {
        -id: ObjectId
        -name: String
        -pictureUrl: String
        %% Guardian.students: [{isPrimary: Boolean, studentId: ObjectId}]
        %% This structure is represented by the StudentAssociationDetails class and relationships
    }

    class StudentAssociationDetails {
        +isPrimary: Boolean
        %% Implicitly references a Student via studentId within Guardian's data structure
    }

    class Driver {
        -id: ObjectId
        -name: String
        -dob: Date
        -hireDate: Date
        -pictureUrl: String
    }

    class Student {
        -id: ObjectId
        -name: String
        -dob: Date
        -address: String
        -pictureUrl: String
    }

    class RouteLocation {
        -id: ObjectId
        -location: Point
        -time: Date
        -speed: Number
        -direction: Number
        -speedLimit: Number
        %% routeId: ObjectId field implicitly exists here to link back to Route
    }

    %% --- Relationships ---

    Route "1" *-- "*" EmbeddedStop : contains
    EmbeddedStop "1" *-- "1" StudentStatusMap : tracks_students
    Route "*" o-- "0..1" Driver : driven_by (via Route.driverId)
    RouteLocation "*" o-- "1" Route : logged_for (via RouteLocation.routeId)
    Route "1" o-- "0..1" RouteLocation : latest_tracked_at (via Route.currentLocationId)

    StudentStatusMap "*" --o "*" Student : refers_to (via student_uuid keys)

    Guardian "1" o-- "*" StudentAssociationDetails : has_student_details
    StudentAssociationDetails "*" --o "1" Student : concerns_student